# CURPSuite

./: .coveragerc  .gitignore  .readthedocs.yaml  HISTORY.rst  MANIFEST.in  MOPL930620HQRRRS05  Pipfile  README.md  __init__.py  main.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  integration.yml
curp/: __about__.py  __init__.py  _altisonantes.py  _estados.py  altisonantes.py  chars.py  cli.py  curp.py  estados.py  exceptions.py  features.py
curpsuite/: __about__.py  __init__.py  altisonantes.py  chars.py  cli.py  curp.py  estados.py  exceptions.py
docs/: CHANGELOG.rst  basics.rst  conf.py  curp_class.rst  index.rst  install.rst  requirements.txt
docs/dev/: contributing.rst
tests/: curp_tests.py  strategies.py  test_curp.py  test_deps.py  test_features.py  utils.py
