[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
keywords = CURP, validation, analysis, Mexico
license_file = LICENSE
project_urls =
    Documentation = https://curpsuite.readthedocs.io
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Legal Industry
    Intended Audience :: Science/Research
    Natural Language :: Spanish

[options]
packages = find:
install_requires =
    unidecode

[options.entry_points]
console_scripts =
    curp = curpsuite.cli:main

[options.packages.find]
exclude =
    tests*
