[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
keywords = CURP, validation, analysis, Mexico
license_file = LICENSE
project_urls =
    Documentation = https://curpsuite.readthedocs.io
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Legal Industry
    Intended Audience :: Science/Research
    Natural Language :: Spanish

[options]
python_requires = >=3.9
packages = find:
install_requires =
    unidecode

[options.entry_points]
console_scripts =
    curp = curp.cli:main

[options.packages.find]
exclude =
    tests*

[options.package_data]
curp = py.typed

[tox:tox]
envlist = py39

[testenv]
deps =
    unidecode
    hypothesis

commands =
    python -m unittest discover

[flake8]
max-line-length = 99
